[project]
name = "volsurfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio[ffmpeg]>=2.37.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "py-lets-be-rational>=1.0.1",
    "py-vollib>=1.0.1",
    "pytest>=8.3.5",
    "python-test>=1.0.4",
    "streamlit>=1.43.2",
]
